--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
+
+@import "~@angular/material/prebuilt-themes/deeppurple-amber.css";
+
+/* @import '~@angular/material/prebuilt-themes/indigo-pink.css'; */
+
+body {
+  font-family: Fredoka One, Verdana, sans-serif;
+}
+
+.container {
+  max-width: 90%;
+  overflow: hidden;
+  margin: 20px auto;
+}
