--- a/src/app/components/book-search/book-search.component.html
+++ b/src/app/components/book-search/book-search.component.html
@@ -2,6 +2,9 @@
   <div class="center">
     <mat-form-field class="example-full-width">
       <input type="search" [(ngModel)]='searchTerm' matInput placeholder="Search book" (keyup.enter)="search()">
+      <button mat-button *ngIf="searchTerm" matSuffix mat-icon-button aria-label="Clear" (click)="searchTerm=''">
+        <mat-icon>close</mat-icon>
+      </button>
     </mat-form-field>
   </div>
 </div>
@@ -17,7 +20,7 @@
       <span *ngFor="let category of book.volumeInfo.categories" class="category">{{ category }}</span>
     </mat-card-content>
     <mat-card-actions>
-      <button mat-button>ADD READING</button>
+      <button (click)="addReading(book.volumeInfo)" mat-button>ADD READING</button>
       <button mat-button>MORE</button>
     </mat-card-actions>
   </mat-card>
