--- a/src/app/components/note-dialog/note-dialog.component.html
+++ b/src/app/components/note-dialog/note-dialog.component.html
@@ -1,15 +1,16 @@
 <div class="new">
   <div>
     <mat-form-field>
-      <textarea [(ngModel)]="quoteNote.quote" rows=3 name="quote" matInput placeholder="quote"></textarea>
+      <textarea [(ngModel)]="quoteNote.quote" rows=4 name="quote" matInput placeholder="quote"></textarea>
     </mat-form-field>
   </div>
   <div>
     <mat-form-field>
-      <textarea [(ngModel)]="quoteNote.note" rows=3 name="note" matInput placeholder="Your notes"></textarea>
+      <textarea [(ngModel)]="quoteNote.note" rows=4 name="note" matInput placeholder="Your notes"></textarea>
     </mat-form-field>  
   </div>
   <div class="btn-wrapper">
     <button (click)="addQuoteNote()" mat-button mat-raised-button color="primary">SAVE</button>
+    <button (click)="cancel()" mat-button mat-raised-button>CANCEL</button>
   </div>
 </div>
