--- a/src/app/components/reading-detail/reading-detail.component.css
+++ b/src/app/components/reading-detail/reading-detail.component.css
@@ -4,37 +4,35 @@ img {
 }
 
 .reading-container {
-  /* display: flex; */
   margin-top: 50px;
-  /* justify-content: space-between; */
   display: grid;
-  grid-template-columns: 1fr 2fr;
+  grid-template-columns: 1fr 3fr;
   grid-gap: 40px;
 }
 
-.new {
+/* .new {
     width: 300px;
 }
 
 .new textarea {
     width: 300px;
-}
+} */
 
-.mat-form-field {
+/* .mat-form-field {
     display: block;
 }
 
 .btn-wrapper {
     display: flex;
     justify-content: flex-end;
-}
+} */
 
 .quote {
     font-style: oblique;
 }
 
 .noteQuote {
-    background: rgb(224, 213, 213);
+    background: rgb(241, 236, 236);
     padding: 10px;
     border-radius: 5px;
     margin-bottom: 10px;
@@ -44,4 +42,9 @@ img {
     border: 1px solid;
     border-radius: 3px;
     padding: 15px;
+}
+
+.posted-date {
+    margin-top: 10px;
+    font-size: 0.7rem;
 }
