google oauth firebase login

--- a/src/app/components/welcome/welcome.component.html
+++ b/src/app/components/welcome/welcome.component.html
@@ -10,5 +10,6 @@
 </header>
 
 <div class="join">
-    <button (click)="join()" mat-button mat-raised-button color="primary">JOIN NOW</button>
+    <button (click)="joinWithGoogle()" mat-button mat-raised-button color="primary">
+      <i class="fab fa-google"></i> Google</button>
 </div>
