--- a/src/app/components/app-shell/app-shell.component.html
+++ b/src/app/components/app-shell/app-shell.component.html
@@ -1,18 +1,31 @@
 <mat-toolbar color="primary">
-  <span>LeadReader</span>
+  <div>
+    <i class="fas fa-book-reader"></i>
+    <span class="logo-text"> Leadreader</span>
+  </div>
 
   <!-- <span class="spacer"></span> -->
 
-  <h3 class="menu-btn" mat-button [matMenuTriggerFor]="menu">Menu</h3>
+  <h3 class="menu-btn" mat-button [matMenuTriggerFor]="menu">
+    <i class="fas fa-bars"></i>
+  </h3>
 
   <!-- <mat-icon>more_vert</mat-icon> -->
 
 </mat-toolbar>
 
 <mat-menu #menu="matMenu">
+  <a mat-menu-item (click)="gotoHome()">
+    <i class="fas fa-home"></i>
+    <span> &nbsp;Home</span>
+  </a>
   <a mat-menu-item [routerLink]="['search-book']">
-    <mat-icon>book</mat-icon>
-    <span>Search Books</span>
+    <i class="fas fa-book"></i>
+    <span> &nbsp;&nbsp;Find Book</span>
+  </a>
+  <a mat-menu-item [routerLink]="['community']">
+    <i class="fas fa-users"></i>
+    <span> Community</span>
   </a>
 </mat-menu>
 
