--- a/src/app/components/welcome/welcome.component.html
+++ b/src/app/components/welcome/welcome.component.html
@@ -4,12 +4,13 @@
       LeadReader
     </div>
     <div class="text">
-      Join a Community Of Dedicated Readers and Enhance Your Reading Experience
+      A Community Of Dedicated Readers sharing Insights
     </div>
   </div>
 </header>
 
 <div class="join">
+    <p>Log In or Sign Up Now</p>
     <button (click)="joinWithGoogle()" mat-button mat-raised-button color="primary">
       <i class="fab fa-google"></i> Google</button>
 </div>
