can delete quotenote for reading

--- a/src/app/components/reading-detail/reading-detail.component.css
+++ b/src/app/components/reading-detail/reading-detail.component.css
@@ -14,6 +14,11 @@
 }
 
 .posted-date {
-    margin-top: 10px;
     font-size: 0.7rem;
+}
+
+.meta {
+    margin-top: 1rem;
+    display: flex;
+    justify-content: space-between
 }
