editing quote textarea bug fixed

--- a/src/app/components/reading-detail/reading-detail.component.html
+++ b/src/app/components/reading-detail/reading-detail.component.html
@@ -45,12 +45,14 @@
       {{ qn.note}}
     </div>
 
-    <textarea [ngClass]="{'visible': isInEditMode[qn.id]}" *ngIf="isInEditMode[qn.id]" [(ngModel)]="qn.quote" name="quote" matInput
-      placeholder="quote">
+
+
+    <textarea (keyup)="autogrowTextareas()" [ngClass]="{'visible': isInEditMode[qn.id]}" *ngIf="isInEditMode[qn.id]" [(ngModel)]="qn.quote"
+      name="quote" matInput placeholder="quote">
     </textarea>
 
-    <textarea [ngClass]="{'visible': isInEditMode[qn.id]}" *ngIf="isInEditMode[qn.id]" [(ngModel)]="qn.note" name="note" matInput
-      placeholder="notes"></textarea>
+    <textarea (keyup)="autogrowTextareas()" [ngClass]="{'visible': isInEditMode[qn.id]}" *ngIf="isInEditMode[qn.id]" [(ngModel)]="qn.note"
+      name="note" matInput placeholder="notes"></textarea>
 
     <div class="quote-info">
 
@@ -74,6 +76,37 @@
   </div>
 
   <div>
-    <button mat-raised-button (click)="openDialog()">NEW NOTE</button>
+    <button *ngIf="!newQuote" mat-raised-button (click)="addNewNote()">NEW NOTE</button>
   </div>
+
+  <div class="new-note" *ngIf="!!newQuote">
+    <textarea (keyup)="autogrowTextareas()" [ngClass]="{'visible': isNew}"[(ngModel)]="newQuote.quote" name="quote"
+      matInput placeholder="quote">
+    </textarea>
+
+    <textarea (keyup)="autogrowTextareas()" [ngClass]="{'visible': isNew}" [(ngModel)]="newQuote.note" name="note"
+      matInput placeholder="notes"></textarea>
+
+    <div>
+      <button mat-raised-button (click)="save()">Save</button>
+    </div>
+  </div>
+
+
+  <!-- <ng-container *ngTemplateOutlet></ng-container> -->
+
 </div>
+<!-- 
+<ng-template #noteEdit>
+  <textarea (keyup)="autogrowTextareas()" class="visible" [(ngModel)]="newQuote.quote" name="quote" matInput placeholder="quote">
+  </textarea>
+
+  <textarea (keyup)="autogrowTextareas()" class="visible" [(ngModel)]="newQuote.note" name="note" matInput placeholder="notes"></textarea>
+
+  <div>
+    <span *ngIf="isInEditMode[qn.id]">
+      <i (click)="isInEditMode[qn.id] = false" class="clickable fas fa-times"></i>&nbsp;
+      <i (click)="saveNote(qn.id)" class="clickable fas fa-save"></i>
+    </span>
+  </div>
+</ng-template> -->
