--- a/src/app/components/readings/readings.component.css
+++ b/src/app/components/readings/readings.component.css
@@ -1,67 +1,99 @@
 .main {
-    display: grid;
-    grid-template-columns: 1fr 1fr 3fr;
-    grid-gap: 2rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr 3fr;
+  grid-gap: 5rem;
 }
 
 .profile-section {
-    margin-top: 1.2rem;
+  margin-top: 1.2rem;
 }
 
 .profile-image {
-    width: 12rem;
-    height: auto;
-    border-radius: 5px;
-    border: 1.5px solid rgb(100, 83, 83);
+  width: 12rem;
+  height: auto;
+  border-radius: 5px;
+  border: 1.5px solid rgb(100, 83, 83);
 }
 
 .profile-details {
-    display: flex;
-    flex-direction: column;
-    height: 6.5rem;
-    justify-content: space-between;
-    margin-bottom: 1rem;
+  display: flex;
+  flex-direction: column;
+  height: 6.5rem;
+  justify-content: space-between;
+  margin-bottom: 1rem;
 }
 
 .profile-details .master-data {
-    font-size: 0.8rem;
+  font-size: 0.8rem;
+}
+
+.header-readings {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.new-reading {
+  padding: 0.4rem;
+  background: tomato;
+  border-radius: 10px;
+  /* margin-right: 1.3rem; */
 }
 
 .reading {
-    width: 320px;
-    height: 6rem;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    transition: all 0.2s;
-    padding-left: 1rem;
+  width: 320px;
+  height: 6rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  transition: all 0.2s;
+  padding-left: 1rem;
+  margin-bottom: 0.3rem;
+}
+
+.reading:hover .delete {
+  display: block;
 }
 
 .reading img {
-    width: 3rem;
-    height: auto;
-    margin-right: 1.5rem;
+  width: 3rem;
+  height: auto;
+  margin-right: 1.5rem;
 }
 
-.reading .reading-details {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    height: 3rem;
+.delete {
+  display: none;
+}
+
+.reading-details {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  height: 4rem;
 }
 
 .reading-details .author {
-    font-size: 0.9rem;
+  font-size: 0.9rem;
 }
 
 .reading:hover {
-    background-color: beige;
-    border-radius: 5px;
-    cursor: pointer;
+  background-color: beige;
+  border-radius: 5px;
+  cursor: pointer;
 }
 
 .reading__active {
-    background-color: beige;
-    border-radius: 5px;
-    cursor: pointer;
+  background-color: beige;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.current-reading {
+  height: 95vh;
+  overflow-y: scroll;
+}
+
+.current-reading::-webkit-scrollbar {
+  width: 0px;
+  background: transparent;
 }
