--- a/src/app/components/readings/readings.component.html
+++ b/src/app/components/readings/readings.component.html
@@ -19,29 +19,34 @@
 
   <div *ngIf="!!readings" class="readings-section">
 
-    <h3>Readings</h3>
+    <div class="header-readings">
+      <h3>Readings</h3>
+      <a [routerLink]="['search-book']" class="new-reading">
+        NEW
+        <i class="fas fa-plus-circle"></i>
+      </a>
+    </div>
 
-    <div class="reading" 
-      [ngClass]="{'reading__active': currentReading === reading}" 
-      *ngFor="let reading of readings" 
-      (click)="currentReading = reading">
-      
+    <div class="reading" [ngClass]="{'reading__active': currentReading?.id === reading.id}" *ngFor="let reading of readings"
+      (click)="!isDeleting ? currentReading = reading: null">
+
       <div class="reading-details">
         <span class="title">{{reading.book.title}}</span>
         <span class="author">{{reading.book.author}}</span>
+        <div class="tooltip">
+          <i (click)="isDeleting = true; deleteReading(reading)" class="delete clickable far fa-trash-alt"></i>
+          <span class="tooltiptext">delete</span>
+        </div>
       </div>
-      
+
       <img [src]="reading.book.imageUrl" alt="book cover">
 
     </div>
 
   </div>
 
-  <div>
-    <lr-reading-detail *ngIf="!!currentReading" 
-      [reading]="currentReading" 
-      (deleteNote)="deleteNote($event)"
-      (updateReading)="updateReading($event)">
+  <div *ngIf="!!currentReading" class="current-reading">
+    <lr-reading-detail *ngIf="!!currentReading" [reading]="currentReading" (deleteNote)="deleteNote($event)" (updateReading)="updateReading($event)">
     </lr-reading-detail>
   </div>
 
