--- a/src/app/components/reading-detail/reading-detail.component.css
+++ b/src/app/components/reading-detail/reading-detail.component.css
@@ -1,49 +1,52 @@
 .quote {
-    font-style: oblique;
+  font-style: oblique;
+}
+
+.note,
+.quote {
+  white-space: pre-wrap;
 }
 
 .noteQuote {
-    background: rgb(241, 236, 236);
-    padding: 10px;
-    border-radius: 5px;
-    margin-bottom: 10px;
+  background: rgb(241, 236, 236);
+  padding: 10px;
+  border-radius: 5px;
+  margin-bottom: 10px;
 }
 
 .note-section {
-    border-radius: 3px;
+  border-radius: 3px;
 }
 
 .posted-date {
-    font-size: 0.7rem;
+  font-size: 0.7rem;
 }
 
 .quote-info {
-    margin-top: 1rem;
-    display: flex;
-    justify-content: space-between
+  margin-top: 1rem;
+  display: flex;
+  justify-content: space-between;
 }
 
 .book {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 1rem;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 1rem;
 }
 
 .book img {
-    width: 8rem;
-    height: auto;
+  width: 8rem;
+  height: auto;
 }
 
-
-
 textarea[name="quote"] {
-    font-style: oblique;
+  font-style: oblique;
 }
 
 textarea {
-    padding: 0.5rem;
-    font-size: 1.2rem;
-    display: block;
-    width: 95%;
-    border-radius: 10px;
+  padding: 0.5rem;
+  font-size: 1.2rem;
+  display: block;
+  width: 95%;
+  border-radius: 10px;
 }
