--- a/src/styles.css
+++ b/src/styles.css
@@ -11,7 +11,7 @@ body {
 .container {
   max-width: 90%;
   overflow: hidden;
-  margin: 20px auto;
+  margin: 5rem auto 0 auto;
 }
 
 .clickable:hover {
@@ -28,4 +28,24 @@ body {
     font-size: 0.7rem;
 }
 
-[hidden=true] { display: none !important;}
+.tooltip .tooltiptext {
+  visibility: hidden;
+  background-color: rgb(212, 157, 157);
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px;
+  font-size: 0.7rem;
+
+  /* Position the tooltip */
+  position: absolute;
+  z-index: 1;
+}
+
+.tooltip:hover .tooltiptext {
+  visibility: visible;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+}
