--- a/src/app/components/app-shell/app-shell.component.html
+++ b/src/app/components/app-shell/app-shell.component.html
@@ -10,25 +10,30 @@
       <i class="fas fa-bars"></i>
     </h3>
 
-    
+
   </div>
 
 </div>
 
 <mat-menu #menu="matMenu">
-    <a mat-menu-item (click)="gotoHome()">
-      <i class="fas fa-home"></i>
-      <span> &nbsp;Home</span>
-    </a>
-    <a mat-menu-item [routerLink]="['search-book']">
-      <i class="fas fa-book"></i>
-      <span> &nbsp;&nbsp;Find Book</span>
-    </a>
-    <a mat-menu-item [routerLink]="['community']">
-      <i class="fas fa-users"></i>
-      <span> Community</span>
-    </a>
-  </mat-menu>
+  <a mat-menu-item class="menu--item" [routerLink]="['profile']">
+    <i class="fas fa-user"></i>
+    <span> &nbsp;Profile</span>
+  </a>
+  <a mat-menu-item (click)="gotoHome()">
+    <i class="fas fa-home"></i>
+    <span> &nbsp;Home</span>
+  </a>
+  <a mat-menu-item [routerLink]="['search-book']">
+    <i class="fas fa-book"></i>
+    <span> &nbsp;&nbsp;Find Book</span>
+  </a>
+  <a mat-menu-item [routerLink]="['community']">
+    <i class="fas fa-users"></i>
+    <span> Community</span>
+  </a>
+
+</mat-menu>
 
 <div class="container">
   <router-outlet></router-outlet>
