--- a/src/app/components/reading-detail/reading-detail.component.html
+++ b/src/app/components/reading-detail/reading-detail.component.html
@@ -29,7 +29,7 @@
 
     </div>
 
-    <img [src]="reading.book.imageUrl" alt="">
+    <img class="book--image__is-mobile" [src]="reading.book.imageUrl" alt="">
 
   </div>
 
