--- a/src/app/components/reading-detail/reading-detail.component.scss
+++ b/src/app/components/reading-detail/reading-detail.component.scss
@@ -50,3 +50,11 @@ textarea {
   width: 95%;
   border-radius: 10px;
 }
+
+
+/* Small Screens */
+@media (max-width: 560px) {
+  .book--image__is-mobile {
+    display: none !important;
+  }
+}
