--- a/src/app/components/readings-list/readings-list.component.html
+++ b/src/app/components/readings-list/readings-list.component.html
@@ -11,7 +11,7 @@
   <div class="reading" [ngClass]="{'reading__active': current?.id === reading.id}" *ngFor="let reading of readings"
     (click)="!isDeleting ? selectReading.emit(reading) : null">
 
-    <div class="reading-details">
+    <div class="book-info">
       <span class="title">{{reading.book.title}}</span>
       <span class="author">{{reading.book.author}}</span>
       <div class="tooltip">
