--- a/src/app/components/readings/readings.component.scss
+++ b/src/app/components/readings/readings.component.scss
@@ -1,4 +1,4 @@
-.main {
+.grid {
   display: grid;
   grid-template-columns: 1fr 1fr 3fr;
   grid-gap: 5rem;
@@ -12,4 +12,21 @@
 .current-reading::-webkit-scrollbar {
   width: 0px;
   background: transparent;
+}
+
+/* Small Screens */
+@media (max-width: 560px) {
+  .grid {
+    grid-template-columns: 1fr;
+    grid-gap: 2rem;
+  }
+
+  lr-user {
+    display: none;
+  }
+
+  .current-reading {
+    border-top: 0.5px #999 solid;
+    padding-top: 1rem;
+  }
 }
